--- a/public/css/genera.css
+++ b/public/css/genera.css
@@ -36,10 +36,10 @@ nav .nav-wrapper{
 
 }
 
-.menu-to .menu-Ez{
+/* .menu-to .menu-Ez{
 	
 
-}
+} */
 .sidenav{
 	top: 65px;
 	transition: all 0.3s ease;
@@ -142,7 +142,7 @@ span.badge.pill{
 	font-size: 10px;
 }
 .sidenav li.active {
-    background-color: ;
+    /* background-color: ; */
     border-radius: 0 25px 25px 0;
 	margin-right: 10px;
 }
@@ -274,7 +274,7 @@ small {
     font-size: 1rem;
     padding: 8px 16px;
 }
-.noti-contendor{
+/* .noti-contendor{
 	/*display: block;
     width: 160px;
     left: 1282.2px;
@@ -282,8 +282,8 @@ small {
     height: 251px;
     transform-origin: 100% 0px;
     opacity: 1;
-    transform: scaleX(1) scaleY(1);*/
-}
+    transform: scaleX(1) scaleY(1);*//*
+} */
 
 .dropdown-content li.divider {
     padding: 0;
